--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "express-ws": "^4.0.0",
-    "readline-sync": "^1.4.10"
+    "express-ws": "^4.0.0"
   }
 }
