--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -28,6 +28,7 @@
       "object-curly-newline": [0],
       "react/prefer-stateless-function": [0],
       "jsx-a11y/click-events-have-key-events": [0],
-      "jsx-a11y/no-static-element-interactions": [0]
+      "jsx-a11y/no-static-element-interactions": [0],
+      "jsx-a11y/no-autofocus": [0]
     }
 }
